# VulkanSample

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mayohn/vulkan/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/mayohn/vulkansample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/glsl/: shader.frag  shader.vert  vert.spv
app/src/main/java/com/mayohn/vulkan/: DrawActivity.java  MainActivity.java
app/src/main/java/com/mayohn/vulkan/jni/: JniRenderer.java
app/src/main/java/com/mayohn/vulkan/renderers/: BaseRenderer.java  GameSurfaceView.java  Program01Renderer.java
app/src/main/java/com/mayohn/vulkan/utils/: FileStorageHelper.java  LoggerConfig.java  ShaderHelper.java  TextResourceReader.java
app/src/main/java/com/mayohn/vulkansample/: MainActivity.java
app/src/main/jni/: JNIPort.cpp  JniApiRenderer.cpp  com_mayohn_vulkan_jni_JniRenderer.h
app/src/main/jni/renderers/: 01ProgramRenderer.cpp  JniRenderer.h
app/src/main/jni/shaderloader/: LoadShaders.cpp  LoadShaders.h
app/src/main/jni/utils/: utils.cpp  utils.h
app/src/main/res/values/: strings.xml
app/src/test/java/com/mayohn/vulkan/: ExampleUnitTest.java
app/src/test/java/com/mayohn/vulkansample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
